phpmyadmin-ingress.yaml
# Define a Kubernetes Ingress resource for PHPMyAdmin
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # Name of the Ingress resource
  name: phpmyadmin-ingress
  
  # Namespace in which the Ingress resource is deployed
  namespace: default
  
  # Labels for identification
  labels:
    name: phpmyadmin-ingress

spec:
  # Define rules for routing
  rules:
  - host: dashboard.com
    http:
      # Define HTTP paths
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          # Define the backend service for handling requests
          service:
            # Name of the backend service
            name: phpmyadmin-service
            
            # Port on which the backend service is listening
            port: 
              number: 80
